--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="Responsive Bootstrap App Landing Page Template">
-<meta name="keywords" content="Kane, Bootstrap, Landing page, Template, App, Mobile">
-<meta name="author" content="Mizanur Rahman">
+<meta name="description" content="My names Kevin and Im a Full Stack Developer">
+<meta name="keywords" content="kevin, upton, technology, full, stack">
+<meta name="author" content="Kevin Upton">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+<meta property="og:image" content="http://upton.tech/images/logo.png"/>
+	
 <!-- SITE TITLE -->
 <title>About Me - Upton Tech</title>
 
